tests/sqlcmd/baselines/errors/remove_classes2.errbaseline
SQL error while compiling query: SQL Syntax error in "REMOVE CLASSES" unexpected token: REMOVE
